# ConsoleApplication1Cpp

./: CMakeLists.txt  ConsoleApplication1Cpp.slnx
ConsoleApplication1Cpp/: CMakeLists.txt  ConsoleApplication1Cpp.cpp  ConsoleApplication1Cpp.vcxproj  ConsoleApplication1Cpp.vcxproj.filters  LoggingExample.cpp  LoggingExample.h
src/: ConsoleApplication1Cpp.vcxproj.filters  LoggingExample.h
